python session/sess_py_2-07-2018
>>> quit()
sessitra@VTA010L:~$ rm arith.pyc
sessitra@VTA010L:~$ ls arith*
ls: cannot access 'arith*': No such file or directory
sessitra@VTA010L:~$ python
Python 2.7.12 (default, Dec  4 2017, 14:50:18) 
[GCC 5.4.0 20160609] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> import arith
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ImportError: No module named arith
>>> import sys
>>> sys.path
['', '/usr/lib/python2.7', '/usr/lib/python2.7/plat-x86_64-linux-gnu', '/usr/lib/python2.7/lib-tk', '/usr/lib/python2.7/lib-old', '/usr/lib/python2.7/lib-dynload', '/usr/local/lib/python2.7/dist-packages', '/usr/lib/python2.7/dist-packages']
>>> sys.path.append("/home/sessitra/sample100")
>>> sys.path
['', '/usr/lib/python2.7', '/usr/lib/python2.7/plat-x86_64-linux-gnu', '/usr/lib/python2.7/lib-tk', '/usr/lib/python2.7/lib-old', '/usr/lib/python2.7/lib-dynload', '/usr/local/lib/python2.7/dist-packages', '/usr/lib/python2.7/dist-packages', '/home/sessitra/sample100']
>>> import arith
>>> dir(arith)
['__builtins__', '__doc__', '__file__', '__name__', '__package__', 'my_add', 'my_diff', 'my_multi']
>>> arith.my_multi(10,4)
40
>>> quit()
sessitra@VTA010L:~$ clear

sessitra@VTA010L:~$ python
Python 2.7.12 (default, Dec  4 2017, 14:50:18) 
[GCC 5.4.0 20160609] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> import telnetlib
>>> tn = telnetlib.Telnet("linuxzoo.net")
>>> tn.read_until("login:")
'\r\nKernel 3.10.0-514.10.2.el7.x86_64 on an x86_64\r\nhost-1-105 login:'
>>> tn.write("root"+"\n")
>>> tn.read_until("Password: ")
' Password: '
>>> tn.write("secure"+"\n")
>>> tn.read_until("# ")
'\r\nLast login: Mon Jul  2 13:05:44 from hub1-gw\r\n[root@host-1-105 ~]# '
>>> tn.write("pwd"+"\n")
>>> tn.read_until("# ")
'pwd\r\n/root\r\n[root@host-1-105 ~]# '
>>> tn.wrtie("df -h"+"\n")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: Telnet instance has no attribute 'wrtie'
>>> tn.write("df -h"+"\n")
>>> data = tn.read_until("# ")
>>> for line in data.split("\n"):
...     print line
... 
df -h
Filesystem                   Size  Used Avail Use% Mounted on
/dev/mapper/centos_lvm-root  6.5G  4.4G  2.2G  67% /
devtmpfs                     229M     0  229M   0% /dev
tmpfs                        245M   84K  245M   1% /dev/shm
tmpfs                        245M  4.8M  240M   2% /run
tmpfs                        245M     0  245M   0% /sys/fs/cgroup
/dev/sda1                    497M  205M  292M  42% /boot
tmpfs                         49M   16K   49M   1% /run/user/42
tmpfs                         49M     0   49M   0% /run/user/0
[root@host-1-105 ~]# 
>>> quit()
sessitra@VTA010L:~$ vi telnet_demo.py
sessitra@VTA010L:~$ python telnet_demo.py 
  File "telnet_demo.py", line 12
    for line in data.split("\n":
                               ^
SyntaxError: invalid syntax
sessitra@VTA010L:~$ vi telnet_demo.py
sessitra@VTA010L:~$ python telnet_demo.py 
df -h
Filesystem                   Size  Used Avail Use% Mounted on
/dev/mapper/centos_lvm-root  6.5G  4.4G  2.2G  67% /
devtmpfs                     229M     0  229M   0% /dev
tmpfs                        245M   84K  245M   1% /dev/shm
tmpfs                        245M  4.8M  240M   2% /run
tmpfs                        245M     0  245M   0% /sys/fs/cgroup
/dev/sda1                    497M  205M  292M  42% /boot
tmpfs                         49M   16K   49M   1% /run/user/42
tmpfs                         49M     0   49M   0% /run/user/0
[root@host-1-105 ~]# 
sessitra@VTA010L:~$ vi telnet_demo.py
sessitra@VTA010L:~$ python telnet_demo.py 
df -h
Filesystem                   Size  Used Avail Use% Mounted on
/dev/mapper/centos_lvm-root  6.5G  4.4G  2.2G  67% /
devtmpfs                     229M     0  229M   0% /dev
tmpfs                        245M   84K  245M   1% /dev/shm
tmpfs                        245M  4.8M  240M   2% /run
tmpfs                        245M     0  245M   0% /sys/fs/cgroup
/dev/sda1                    497M  205M  292M  42% /boot
tmpfs                         49M   16K   49M   1% /run/user/42
tmpfs                         49M     0   49M   0% /run/user/0
[root@host-1-105 ~]# 
sessitra@VTA010L:~$ vi telnet_demo.py
sessitra@VTA010L:~$ vi sys_demo.py
sessitra@VTA010L:~$ python sys_demo.py 23 hi there 3874
command line arguments passed are: ['sys_demo.py', '23', 'hi', 'there', '3874']
sessitra@VTA010L:~$ vi sys_demo.py
sessitra@VTA010L:~$ python sys_demo.py 23 hi there 3874
command line arguments passed are: ['sys_demo.py', '23', 'hi', 'there', '3874']
program name is: sys_demo.py
sessitra@VTA010L:~$ vi telnet_demo.py
sessitra@VTA010L:~$ python telnet_demo.py "df -h"
df -h
Filesystem                   Size  Used Avail Use% Mounted on
/dev/mapper/centos_lvm-root  6.5G  4.4G  2.2G  67% /
devtmpfs                     229M     0  229M   0% /dev
tmpfs                        245M   84K  245M   1% /dev/shm
tmpfs                        245M  4.8M  240M   2% /run
tmpfs                        245M     0  245M   0% /sys/fs/cgroup
/dev/sda1                    497M  205M  292M  42% /boot
tmpfs                         49M   16K   49M   1% /run/user/42
tmpfs                         49M     0   49M   0% /run/user/0
[root@host-1-105 ~]# 
sessitra@VTA010L:~$ python telnet_demo.py pwd
pwd
/root
[root@host-1-105 ~]# 
sessitra@VTA010L:~$ python telnet_demo.py ls
ls
anaconda-ks.cfg  initial-setup-ks.cfg
[root@host-1-105 ~]# 
sessitra@VTA010L:~$ python telnet_demo.py "ls -lrt"
ls -lrt
total 8
-rw-------. 1 root root 1547 Sep  8  2014 anaconda-ks.cfg
-rw-r--r--. 1 root root 1598 Sep  8  2014 initial-setup-ks.cfg
[root@host-1-105 ~]# 
sessitra@VTA010L:~$ vi telnet_demo.py
sessitra@VTA010L:~$ python telnet_demo.py "ls -lrt"
^CTraceback (most recent call last):
  File "telnet_demo.py", line 23, in <module>
    get_cmd_op(sys.argv[1])
  File "telnet_demo.py", line 15, in get_cmd_op
    tn = telnet_connect()
  File "telnet_demo.py", line 10, in telnet_connect
    tn.read_until("# ")
  File "/usr/lib/python2.7/telnetlib.py", line 294, in read_until
    return self._read_until_with_poll(match, timeout)
  File "/usr/lib/python2.7/telnetlib.py", line 318, in _read_until_with_poll
    else 1000 * call_timeout)
KeyboardInterrupt
sessitra@VTA010L:~$ vi telnet_demo.py
sessitra@VTA010L:~$ vi telnet_demo.py
sessitra@VTA010L:~$ python
Python 2.7.12 (default, Dec  4 2017, 14:50:18) 
[GCC 5.4.0 20160609] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> "hi there how are you where are you".split()
['hi', 'there', 'how', 'are', 'you', 'where', 'are', 'you']
>>> "hi there how are you where are you".split("r")
['hi the', 'e how a', 'e you whe', 'e a', 'e you']
>>> "hi there how are you where are you".split("r", 3)
['hi the', 'e how a', 'e you whe', 'e are you']
>>> "".join(["hi", "there", "how", "are", "you"])
'hitherehowareyou'
>>> "%".join(["hi", "there", "how", "are", "you"])
'hi%there%how%are%you'
>>> "$\".join(["hi", "there", "how", "are", "you"])
  File "<stdin>", line 1
    "$\".join(["hi", "there", "how", "are", "you"])
                 ^
SyntaxError: invalid syntax
>>> "$".join(["hi", "there", "how", "are", "you"])
'hi$there$how$are$you'
>>> "$\\".join(["hi", "there", "how", "are", "you"])
'hi$\\there$\\how$\\are$\\you'
>>> "$\".join(["hi", "there", "how", "are", "you"])
  File "<stdin>", line 1
    "$\".join(["hi", "there", "how", "are", "you"])
                 ^
split

join

list comprehension

sys.path

.pyc

telnetlib

linuxzoo.net


SyntaxError: invalid syntax
>>> "$".join([34, 43, 11, 42])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: sequence item 0: expected string, int found
>>> str(100)
'100'
>>> l = [90, 43, 21]
>>> v = []
>>> for item in l:
...     v.append(str(item))
... 
>>> v
['90', '43', '21']
>>> m = [str(i) for i in l]
>>> m
['90', '43', '21']
>>> "$".join([str(i) for i in [90, 32, 12, 43, 56]])
'90$32$12$43$56'
>>> 
>>> ",".join([str(i) for i in [90, 32, 12, 43, 56]])
'90,32,12,43,56'
>>> range(1,11)
[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
>>> [i+2 for i in range(1,11)]
[3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
>>> 

